# Organizacao_projeto_python

./: README.md  makefile  mkdocs.yml  pyproject.toml  requiriments_dev.txt
cesar/: __init__.py  cesar.py
docs/: index.md
tests/: test_decripta.py  test_encripta.py
