[tool.poetry]
name = "projeto"
version = "0.1.0"
description = "organização de um projeto"
authors = ["alexandre <lexander.alfa@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
